<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".komponen3"
    android:background="#80b3ff">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:text="@string/isi_kom3" />

    <Button
        android:id="@+id/button_syntax3"
        android:layout_width="420dp"
        android:layout_height="100dp"
        android:text="@string/contoh_3"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="151dp"
        android:background="#4d94ff"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:layout_marginTop="300dp"/>

    <Button
        android:id="@+id/button_link3"
        android:layout_width="420dp"
        android:layout_height="100dp"
        android:text="@string/link_kom3"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="151dp"
        android:background="#4d94ff"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:layout_marginTop="450dp"
        android:onClick="link3"/>

</RelativeLayout>